fixed bug in run script cmd line params

--- a/scripts/run_rochpl.in
+++ b/scripts/run_rochpl.in
@@ -114,7 +114,7 @@ oversubscribe=true
 # check if we have a modern version of getopt that can handle whitespace and long parameters
 getopt -T
 if [[ $? -eq 4 ]]; then
-  GETOPT_PARSE=$(getopt --name "${0}" --longoptions NB:,help,version,output_file:,cpu_trsm_work_size:,nmbin: --options hP:Q:p:q:N:i:f:o: -- "$@")
+  GETOPT_PARSE=$(getopt --name "${0}" --longoptions NB:,help,version,output_file:,cpu_trsm_work_size:,nbmin: --options hP:Q:p:q:N:i:f:o: -- "$@")
 else
   echo "Need a new version of getopt"
   exit 1
