--- a/scripts/run_rochpl.in
+++ b/scripts/run_rochpl.in
@@ -97,6 +97,8 @@ frac=0.6
 
 filename=HPL.dat
 inputfile=false
+outfilename=HPL.out
+outputfile=false
 cmdrun=false
 
 export LD_LIBRARY_PATH=${rocblas_dir}:${blas_dir}:${rocm_dir}/lib:$LD_LIBRARY_PATH
@@ -110,7 +112,7 @@ oversubscribe=true
 # check if we have a modern version of getopt that can handle whitespace and long parameters
 getopt -T
 if [[ $? -eq 4 ]]; then
-  GETOPT_PARSE=$(getopt --name "${0}" --longoptions NB:,help,version, --options hP:Q:p:q:N:i:f: -- "$@")
+  GETOPT_PARSE=$(getopt --name "${0}" --longoptions NB:,help,version,output_file: --options hP:Q:p:q:N:i:f:o: -- "$@")
 else
   echo "Need a new version of getopt"
   exit 1
@@ -159,6 +161,10 @@ while true; do
     -i)
         filename=${2}
         inputfile=true
+        shift 2 ;;
+    -o|--output_file)
+        outfilename=${2}
+        outputfile=true
         shift 2 ;;
     --) shift ; break ;;
     *)  echo "Unexpected command line parameter received; aborting";
@@ -406,6 +412,10 @@ if [[ "${inputfile}" == true ]]; then
   rochpl_args+=" -i ${filename}"
 else
   rochpl_args+=" -N ${N} -NB ${NB}"
+fi
+
+if [[ "${outputfile}" == true ]]; then
+  rochpl_args+=" -o ${outfilename}"
 fi
 
 #run
